chore(config): ajusta propriedades do ambiente de desenvolvimento
- Define conexão H2 em memória como padrão para o perfil dev
- Adiciona propriedade spring.profiles.active=dev
- Mantém compatibilidade com execução local e testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
+spring.profiles.active=dev
+
